# c4-genai-suite

./: .gitleaks.toml  .gitleaksignore  CHANGELOG.md  CONTRIBUTING.md  DEVELOPERS.md  Dockerfile  EVAL_INTEGRATION_PLAN.md  README.md  cached_results-c4-local.json  docker-compose-dev.yml  docker-compose.yml  package-lock.json  package.json
.github/: copilot-instructions.md  dependabot.yaml  dependency-review-config.yaml  release-please-manifest.json  release.yaml  release.yml
.github/ISSUE_TEMPLATE/: 1-bug-report.yaml
.github/workflows/: a11y-scan.yaml  backend.yaml  build-container-images.yaml  build-dev-helper-container-images.yaml  confluence-importer.yaml  default.yaml  dependabot.yaml  dependency-review.yaml  deployment.yaml  e2e-complete.yaml  e2e-template.yaml  e2e.yaml  eval.yaml  frontend.yaml  gitleaks.yaml  helm-chart.yaml  push_images.yaml  quality-gate.yaml  reis-stresstest.yaml  reis.yaml  release-notification.yaml  release-preparation.yaml  release-publish-chart-and-container-images.yaml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  v1-MILESTONE-AUDIT.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/milestones/: v1.0-MILESTONE-AUDIT.md  v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
backend/: .env.example  Dockerfile  backend-dev-spec.json  backend-external-spec.json  eslint.config.mjs  package-lock.json  package.json
backend/docs/: Configuration.md
backend/src/: app.module.ts  main.ts
dev/caddy-gateway-proxy/: Dockerfile
dev/mcp-tool-as-server/: Dockerfile  package-lock.json
dev/minio/: docker-compose.yml
dev/oauth-mock/: package-lock.json  package.json
dev/reis-base-image/: Dockerfile
dev/reis-dev-base-image/: Dockerfile
e2e/: README.md  package-lock.json  package.json  playwright.config.ts
e2e/expensive-tests/: azure-vision.spec.ts
e2e/extension-tests/: a11y.spec.ts  assistant-change.spec.ts  azure-configurable-arguments.spec.ts  azure-mcp-server.spec.ts  azure-open-ai-assistant-change.spec.ts  azure-open-ai-new-chat.spec.ts  azure-open-ai-search-file-in-chat.spec.ts  azure-open-ai-whole-file.spec.ts  azure-open-ai.spec.ts  azure-user-args.spec.ts  basic.spec.ts  configurable-arguments.spec.ts  mcp-server.spec.ts  new-chat.spec.ts  search-file-in-chat.spec.ts  user-args.spec.ts  viewport.spec.ts  (+1 more)
frontend/: .gitignore  .prettierignore  Dockerfile  copy-pdfjs-wasm.mjs  eslint.config.mjs  index.html  knip.json  openapitools.json  package-lock.json  package.json  vite.config.ts  vitest.setup.ts
helm-chart/: Chart.yaml  README.md  values.schema.json  values.yaml
scripts/: README.md  process-management.js  run-tests.js
services/confluence-importer/: .env.example  README.md  main.py  pyproject.toml  requirements.txt
services/confluence-importer/confluence_importer/: c4.py  confluence.py  markdown.py
services/confluence-importer/src/: c4.py  confluence.py  main.py  markdown.py
services/confluence-importer/tests/: test_c4.py  test_confluence.py  test_markdown.py
services/eval/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  ROADMAP.md  eval-dev-spec.json  generate_openapi.py  pyproject.toml
services/eval/llm_eval/: schemas.py  settings.py
services/eval/llm_eval/alembic/versions/: f8a3b2c4d5e6_add_c4_assistant_and_callback_user.py  g9b5d3e7f8a1_drop_llm_endpoint_id_from_evaluation.py  h1c6e4f8a2b3_drop_callback_user_from_evaluation.py
services/eval/llm_eval/database/: model.py
services/eval/llm_eval/eval/evaluations/: models.py  router.py
services/eval/llm_eval/eval/evaluations/logic/: find_evaluation_detail_summary.py  run_evaluation_by_qa_catalog.py
services/eval/llm_eval/eval/evaluations/tasks/: evaluate_test_case_task.py  retrieve_answer_task.py  start_evaluation_task.py
services/eval/llm_eval/llm_endpoints/: router.py
services/eval/llm_eval/llm_endpoints/plugins/: api_models.py  factory.py
services/eval/llm_eval/llm_query/: c4_assistant_query.py
services/eval/llm_eval/metrics/: router.py
services/eval/llm_eval/metrics/plugins/: api_models.py
services/eval/llm_eval/metrics/plugins/impl/: g_eval.py
services/eval/llm_eval/qa_catalog/generator/implementation/: QACatalogGeneratorTypes.py
services/eval/llm_eval/utils/: api.py
services/eval/tests/unit/backend/qa_catalog/: test_router.py
services/reis/: .env.example  .env.prod  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml  reis-dev-spec.json
services/reis/rei_s/: app_factory.py  config.py  logger_formatter.py  mcp.py  scripts.py  utils.py
services/reis/rei_s/routes/: files.py
services/reis/rei_s/services/: embeddings_provider.py  filestore_adapter.py  filestore_provider.py  multiprocess_utils.py  store_service.py  vectorstore_provider.py
services/reis/rei_s/services/filestores/: filesystem.py  postgres.py  s3.py
services/reis/rei_s/services/formats/: abstract_format_provider.py  code_provider.py  html_provider.py  json_provider.py  libre_office_provider.py  markdown_provider.py  ms_excel_provider.py  ms_ppt_provider.py  ms_word_provider.py  office_provider.py  outlook_provider.py  pdf_provider.py  plain_provider.py  utils.py  video_transcription_provider.py  voice_transcription_provider.py  xml_provider.py  yaml_provider.py
services/reis/rei_s/services/vectorstores/: azure_ai_search.py  devnull_store.py  pgvector.py
services/reis/rei_s/types/: dtos.py  source_file.py
services/reis/tests/data/: birthdays.md  birthdays_frontmatter.md  env_embeddings_missing_openai_compatible.env  response_get_index.py
services/reis/tests/e2e/: file_store_s3_test.py  format_providers_whisper_test.py  store_pgvector_test.py  vector_store_azure_ai_test.py  vector_store_pgvector_test.py
services/reis/tests/stress/: processing_test.py
services/reis/tests/unit/: app_multi_worker_test.py  app_test.py  config_test.py  format_providers_test.py  tmp_file_permission_test.py  vector_store_azure_ai_test.py
(+541 files in other folders)
