[project]
name = "confluence-importer"
version = "0.1.0"
description = "Imports Confluence pages into c4 Buckets, enabling c4 Assistants to quickly and accurately answer questions using your organization's Confluence content."
readme = "README.md"
requires-python = ">=3.13.2"
dependencies = [
    "atlassian-python-api==4.0.7",
    "markdownify>=1.2.3",
    "pydantic-settings>=2.14.2",
    "pyyaml>=6.0.1",
    "requests==2.34.2",
    "structlog==25.5.0",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["D", "E", "W", "F", "N", "A", "B"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pip>=26.1.2",
    "pytest>=9.1.1",
    "pytest-mock>=3.14.1",
    "ruff>=0.15.20",
]

[tool.mypy]
strict = true
install_types = true
non_interactive = true
ignore_missing_imports = true
exclude = [
    ".cache",
    ]
