[project]
name = "rag-eval"
version = "0.1.0"
description = "Rag-Eval Pipeline including QA-Catalog, DeepEval and visualization"
authors = [
    { name = "Johannes Widera", email = "johannes.widera@codecentric.de" },
    { name = "Benjamin Bauer", email = "benjamin.bauer@codecentric.de" },
    { name = "Ahmet Tolga Erdönmez", email = "tolga.erdoenmez@codecentric.de" },
    { name = "Dominik Fladung", email = "dominik.fladung@codecentric.de" },
    { name = "Daniel Ladischenski", email = "daniel.ladischenski@codecentric.de" },
    { name = "Karl Södler", email = "karl.soedler@codecentric.de" },
]
requires-python = ">=3.12,<4,<3.13"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "python-dotenv>=1.1.0,<2",
    "pydantic>=2.11.1,<3",
    "loguru>=0.7.3,<0.8",
    "pypdf>=6.10.2,<7",
    "deepeval>=4.0,<5",
    "langchain-openai>=1.1.14,<2",
    "pyyaml>=6.0.2,<7",
    "sqlalchemy>=2.0.40,<3",
    "alembic>=1.15.2,<2",
    "asyncpg>=0.30.0,<0.31",
    "greenlet>=3.0.3,<4",
    "anyio>=4.9.0,<5",
    "httpx>=0.28.1,<0.29",
    "fastapi[standard]>=0.116.0,<1",
    "langchain-core>=1.2.22,<2",
    "email-validator>=2.2.0,<3",
    "cryptography>=46.0.6,<47",
    "pyjwt>=2.10.1,<3",
    "openpyxl>=3.1.5,<4",
    "celery[redis]>=5.4.0,<6",
    "pydantic-settings>=2.9.1,<3",
    "rapidfuzz>=3.13.0,<4",
    "boto3>=1.35.0,<2",
    "boto3-stubs[s3]>=1.35.0,<2",
    "python-multipart>=0.0.27,<1",
    "pandas>=2.2,<3",
]

[project.scripts]
generate-api-spec = "generate_openapi:generate"

# NOTE: ragas (>=0.3.0,<0.4) is disabled due to unresolved CVEs in its
# transitive dependencies (diskcache CVE-2025-69872, langchain-core<0.4
# GHSA-qh6h-p6c9-ff54). The ragas generator code is preserved under
# llm_eval/qa_catalog/generator/implementation/ragas/ but won't be
# importable until ragas is re-added here once upstream fixes land.
# To re-enable: add '"ragas>=0.3.0,<0.4"' back to [dependencies] or
# [project.optional-dependencies] and run 'uv lock'.

[dependency-groups]
dev = [
    "psycopg2-binary>=2.9.9,<3",
    "pre-commit>=4.2.0,<5",
    "ruff>=0.11.2,<0.12",
    "debugpy>=1.8.8,<2",
    "black>=26.3.1,<27",
    "flower>=2.0.1,<3",
]
test = [
    "pytest>=9.0.3,<10",
    "pytest-asyncio>=1,<2",
    "pytest-cov>=6.0.0,<7",
    "pytest-dotenv>=0.5.2,<0.6",
    "sqlalchemy-utils>=0.41.2,<0.42",
    "pytest-env>=1.1.5,<2",
    "pytest-mock>=3.14.0,<4",
]

[tool.uv]
default-groups = "all"

constraint-dependencies = [
    "idna>=3.15",
    "langsmith>=0.8.0",
    "mako>=1.3.12",
    "starlette>=1.0.1",
    "urllib3>=2.7.0",
]

[tool.uv.build-backend]
module-name = ["llm_eval"]
module-root = ""
namespace = true

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"

[tool.ruff]
lint.select = ["E", "F", "ANN"]
lint.ignore = ["ANN101", "ANN102"]

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true

[tool.pytest.ini_options]
addopts = "--cov=alembic --cov=database --cov=config --cov=utils --cov=llm_eval --cov-report=term-missing --ignore=tests/unit/qa_catalog/generator/implementation/ragas --ignore=tests/unit/qa_catalog/test_synthetic_qa_pair.py --ignore=tests/unit/qa_catalog/generator/implementation/test___init__.py --ignore=tests/unit/utils/test_mixed_document_loader.py"
testpaths = "tests"
env_override_existing_values = 1
env_files = [".env", ".env.local"]

[tool.pyright]
typeCheckingMode = "basic"
exclude = ["alembic/versions", ".cache", ".history", "frontend", "data"]

[tool.coverage.run]
omit = ["tests/*"]
