[project]
name = "REI-S"
version = "0.1.0"
description = ""
authors = [
    {name = "Patrick Reichmann", email = "patrick.reichmann@codecentric.de"},
    {name = "Hendrik Schawe", email = "hendrik.schawe@codecentric.de"}
]
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.12.0,<4.0"
dependencies = [
    "pydantic==2.13.3",
    "pydantic-settings>=2.14.0",
    "langchain-core>=1.3.0",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.1.16",
    "langchain-postgres>=0.0.16",
    "langchain-ollama>=0.3.10",
    "langchain-aws>=1.4.4",
    "langchain-nvidia-ai-endpoints>=0.3.19",
    "psycopg[binary]>=3.3.3",
    "fastapi[standard]==0.136.0",
    "azure-search-documents==11.6.0",
    "azure-identity==1.25.3",
    "pdfminer-six>=20260107",
    "pypdf>=6.10.2",
    "ffmpeg-python>=0.2.0",
    "python-oxmsg>=0.0.2",
    "aiofiles>=25.1.0",
    "prometheus-fastapi-instrumentator>=7.0.0",
    "fastmcp>=3.2.4",
    "boto3>=1.42.92",
    "boto3-stubs[s3]>=1.42.89",
    "weasyprint>=67.0",
    "markdown>=3.10",
    "pygments>=2.19.2",
    "orjson>=3.11.5",
    "pyyaml>=6.0",
]

[dependency-groups]
dev = [
    "ruff==0.15.11",
    "ty>=0.0.32",
    "pip==26.0.1",
    "pre-commit==4.5.1",
    "pytest==9.0.3",
    "pytest-cov==7.1.0",
    "pytest-mock==3.15.1",
    "pytest-responses==0.5.1",
    "pytest-github-report==0.0.1",
    "pytest-error-for-skips==2.0.2",
    "faker==40.15.0",
    "responses==0.26.0",
]

[project.scripts]
dev = "rei_s.scripts:dev"
format = "rei_s.scripts:format_code"
generate-api-spec = "rei_s.scripts:generate_api_spec"
lint = "rei_s.scripts:lint"
stresstest = "rei_s.scripts:stresstest"
test = "rei_s.scripts:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.coverage.report]
exclude_also = [
    "raise NotImplementedError",
    "def __repr__",
    ]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "W", "F", "N", "A", "B"]

[tool.ty.terminal]
error-on-warning = true
