[project]
name = "REI-S"
version = "0.1.0"
description = ""
authors = [
    {name = "Patrick Reichmann", email = "patrick.reichmann@codecentric.de"},
    {name = "Hendrik Schawe", email = "hendrik.schawe@codecentric.de"}
]
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.12.0,<4.0"
dependencies = [
    "pydantic==2.13.4",
    "pydantic-settings>=2.14.2",
    "langchain-core>=1.4.8",
    "langchain-community>=0.4.2",
    "langchain-openai>=1.3.3",
    "langchain-postgres>=0.0.16",
    "langchain-ollama>=0.3.10",
    "langchain-aws>=1.6.2",
    "langchain-nvidia-ai-endpoints>=1.4.3",
    "psycopg[binary]>=3.3.4",
    "fastapi[standard]==0.139.0",
    "azure-search-documents==11.6.0",
    "azure-identity==1.25.3",
    "pdfminer-six>=20260107",
    "pypdf>=6.14.2",
    "ffmpeg-python>=0.2.0",
    "python-oxmsg>=0.0.2",
    "aiofiles>=25.1.0",
    "prometheus-fastapi-instrumentator>=8.0.2",
    "fastmcp>=3.4.3",
    "boto3>=1.43.43",
    "boto3-stubs[s3]>=1.43.42",
    "weasyprint>=67.0",
    "markdown>=3.10",
    "pygments>=2.19.2",
    "orjson>=3.11.9",
    "pyyaml>=6.0",
    "tenacity>=9.1.4",
]

[dependency-groups]
dev = [
    "ruff==0.15.20",
    "ty>=0.0.57",
    "pip==26.1.2",
    "pre-commit==4.6.0",
    "pytest==9.1.1",
    "pytest-cov==7.1.0",
    "pytest-mock==3.15.1",
    "pytest-responses==0.6.0",
    "pytest-github-report==0.0.1",
    "pytest-error-for-skips==2.0.2",
    "faker==40.21.0",
    "responses==0.26.2",
]

[project.scripts]
dev = "rei_s.scripts:dev"
format = "rei_s.scripts:format_code"
generate-api-spec = "rei_s.scripts:generate_api_spec"
lint = "rei_s.scripts:lint"
stresstest = "rei_s.scripts:stresstest"
test = "rei_s.scripts:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.coverage.report]
exclude_also = [
    "raise NotImplementedError",
    "def __repr__",
    ]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "W", "F", "N", "A", "B"]

[tool.ty.terminal]
error-on-warning = true
